Individual page, fixed contrasts and duplicate id values

--- a/webapp/src/main/webapp/css/individual/individual-2column-view.css
+++ b/webapp/src/main/webapp/css/individual/individual-2column-view.css
@@ -269,7 +269,7 @@ span#quickViewLink img {
     padding-top:18px;
 }
 #individual-info div#contactContainer h3{
-    color:#8aa149;
+    color:#536520;
 }
 ul#individual-personInPosition li {
     padding-bottom:12px;
